Portfolio page/navbar
added styling to the navbar to target nav specific unordered lists and added 'fluff' to the portfolio page

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -9,24 +9,31 @@
 <body>
     <nav>
         <ul>
-            <li>
+            <li class="navbar">
                 <a href="index.html">Home</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="portfoli.html">Portfolio</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="services.html">Services</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="contact.html">Contact</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="survey.html">Survey</a>
             </li>
         </ul>
     </nav>
     <h1>Contact</h1>
+    <p>If you would like to send a ghost email you can do that here after its set up</p>
+
+    <p>Email:<br/>email@email.com</p>
+    <p>Phone Number:<br/>307-867-5309 </p>
+    <p>Address:<br/>
+        1234 Zathura St, Jumanji NA
+    </p>
     
 </body>
 </html>
