--- a/Pages/portfoli.html
+++ b/Pages/portfoli.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,27 +8,39 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav>
         <ul>
-            <li>
+            <li class="navbar">
                 <a href="index.html">Home</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="portfoli.html">Portfolio</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="services.html">Services</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="contact.html">Contact</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="survey.html">Survey</a>
             </li>
         </ul>
     </nav>
     <h1>Portfolio</h1>
-    
+    <div>
+        <h2>Past projects</h2>
+        <p>once worked in a bootcamp and made some cool stuffs such as <br />
+        <ul>
+            <li>cool</li>
+            <li>dope</li>
+            <li>not totally cool but good enough</li>
+        </ul>
+        <p> Worked with many fake organizations throughout the tri-state area</p>
+        </p>
+    </div>
 </body>
+
 </html>
