--- a/Pages/services.html
+++ b/Pages/services.html
@@ -10,19 +10,19 @@
 <body>
     <nav>
         <ul>
-            <li>
+            <li class="navbar">
                 <a href="index.html">Home</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="portfoli.html">Portfolio</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="services.html">Services</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="contact.html">Contact</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="survey.html">Survey</a>
             </li>
         </ul>
