worked on the main page
added image and positioning

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav>
         <ul>
@@ -27,13 +30,16 @@
         </ul>
     </nav>
     <h1>Contact</h1>
+    <nav></nav>
     <p>If you would like to send a ghost email you can do that here after its set up</p>
 
-    <p>Email:<br/>email@email.com</p>
-    <p>Phone Number:<br/>307-867-5309 </p>
-    <p>Address:<br/>
+    <p>Email:<br />email@email.com</p>
+    <p>Phone Number:<br />307-867-5309 </p>
+    <p>Address:<br />
         1234 Zathura St, Jumanji NA
     </p>
-    
+    </nav>
+
 </body>
+
 </html>
