--- a/Pages/index.html
+++ b/Pages/index.html
@@ -30,21 +30,36 @@
             alt="super proffessional corporate photo">
     </div>
     <main>
-        <h1>Buisness name</h1>
-        <p>lorem ipsum mock dats for the project to be filled in at a later date, the purpose is not to experiment
+        <h1 id="center">Business name</h1>
+        <p id="center">lorem ipsum mock dats for the project to be filled in at a later date, the purpose is not to
+            experiment
             with the story making upfront but to remember the code </p>
     </main>
-    <h2>Owner</h2>
-    <p1>this is the owner they did ownery stuff to get wher ethey are and created for the purpose of this learning page
-        to get back on track
-    </p1>
-    <p2>you wont believe the levels of stress they went through to get created its like they were created out of thin
-        air
-    </p2>
-    <h4>About</h4>
-    <p2>the company was built in the instance of its required pressence on the seat of a firm gym workbench if naught
-        for a dedicated sir gerk this would not exist</p2>
+    <section>
 
+        <article class="owner">
+            <h2>Owner</h2>
+            <p1>this is the owner they did ownery stuff to get wher ethey are and created for the purpose of this
+                learning
+                page
+                to get back on track
+            </p1>
+            <p2>you wont believe the levels of stress they went through to get created its like they were created out of
+                thin
+                air
+            </p2>
+        </article>
+        <div>
+            <img src="https://th.bing.com/th/id/R.a0cebb96b75d8314efa7758493301af5?rik=Kolvwgisa89pJw&riu=http%3a%2f%2f2static.fjcdn.com%2flarge%2fpictures%2f23%2f01%2f2301b3_5671661.jpg&ehk=roJtnTh3WSD3M86EFzb%2fpN86IkKUhR3jTx9KzZnXVLY%3d&risl=&pid=ImgRaw&r=0"
+                alt="randome author pic" style="width:200px;height:300px;float:left;margin-left:200px;">
+        </div>
+    </section>
+    <div class="about">
+        <h4>About</h4>
+        <p2>the company was built in the instance of its required pressence on the seat of a firm gym workbench if
+            naught
+            for a dedicated sir gerk this would not exist</p2>
+    </div>
 </body>
 </head>
 
