--- a/Pages/survey.html
+++ b/Pages/survey.html
@@ -10,22 +10,23 @@
 <body>
     <nav>
         <ul>
-            <li>
+            <li class="navbar">
                 <a href="index.html">Home</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="portfoli.html">Portfolio</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="services.html">Services</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="contact.html">Contact</a>
             </li>
-            <li>
+            <li class="navbar">
                 <a href="survey.html">Survey</a>
             </li>
         </ul>
+    </nav>
     <h1>Survey</h1>
 </body>
 </html>
