--- a/Pages/index.html
+++ b/Pages/index.html
@@ -54,12 +54,21 @@
                 alt="randome author pic" style="width:200px;height:300px;float:left;margin-left:200px;">
         </div>
     </section>
-    <div class="about">
-        <h4>About</h4>
-        <p2>the company was built in the instance of its required pressence on the seat of a firm gym workbench if
-            naught
-            for a dedicated sir gerk this would not exist</p2>
-    </div>
+    <section>
+        <img src="https://media.istockphoto.com/photos/main-street-running-through-small-ohio-town-aerial-picture-id1287538714?b=1&k=20&m=1287538714&s=170667a&w=0&h=UtwL2mdaKsBk40sSUGFVWCmqw99q4xWwQa2DayTqGPU=" alt="picture of small town"
+        style="width:400px;height:300px;margin-top: 50px;margin-left: 200px;"
+        >
+        <div class="about">
+            <h4>About</h4>
+            <p2>the company was built in the instance of its required pressence on the seat of a firm gym workbench if
+                naught
+                for a dedicated sir gerk this would not exist</p2>
+        </div>
+    </section>
+    <footer>
+<p>trademark G&E industries</p>
+<p>founded 2022</p>
+    </footer>
 </body>
 </head>
 
