footer to portfolio
added footer to the portfolio

--- a/Pages/portfoli.html
+++ b/Pages/portfoli.html
@@ -41,6 +41,10 @@
         <p> Worked with many fake organizations throughout the tri-state area</p>
         </p>
     </div>
+    <footer>
+        <p>trademark G&E industries</p>
+        <p>founded 2022</p>
+    </footer>
 </body>
 
 </html>
