--- a/Pages/index.html
+++ b/Pages/index.html
@@ -55,9 +55,8 @@
         </div>
     </section>
     <section>
-        <img src="https://media.istockphoto.com/photos/main-street-running-through-small-ohio-town-aerial-picture-id1287538714?b=1&k=20&m=1287538714&s=170667a&w=0&h=UtwL2mdaKsBk40sSUGFVWCmqw99q4xWwQa2DayTqGPU=" alt="picture of small town"
-        style="width:400px;height:300px;margin-top: 50px;margin-left: 200px;"
-        >
+        <img src="https://media.istockphoto.com/photos/main-street-running-through-small-ohio-town-aerial-picture-id1287538714?b=1&k=20&m=1287538714&s=170667a&w=0&h=UtwL2mdaKsBk40sSUGFVWCmqw99q4xWwQa2DayTqGPU="
+            alt="picture of small town" style="width:400px;height:300px;margin-top: 50px;margin-left: 200px;">
         <div class="about">
             <h4>About</h4>
             <p2>the company was built in the instance of its required pressence on the seat of a firm gym workbench if
@@ -66,8 +65,8 @@
         </div>
     </section>
     <footer>
-<p>trademark G&E industries</p>
-<p>founded 2022</p>
+        <p>trademark G&E industries</p>
+        <p>founded 2022</p>
     </footer>
 </body>
 </head>
