--- a/Pages/index.html
+++ b/Pages/index.html
@@ -5,21 +5,21 @@
     <link rel="stylesheet" href="styles.css">
 
 <body>
-    <nav>
+    <nav class="navi">
         <ul>
-            <li class="navbar">
+            <li class="navibar">
                 <a href="index.html">Home</a>
             </li>
-            <li class="navbar">
+            <li class="navibar">
                 <a href="portfoli.html">Portfolio</a>
             </li>
-            <li class="navbar">
+            <li class="navibar">
                 <a href="services.html">Services</a>
             </li>
-            <li class="navbar">
+            <li class="navibar">
                 <a href="contact.html">Contact</a>
             </li>
-            <li class="navbar">
+            <li class="navibar">
                 <a href="survey.html">Survey</a>
             </li>
         </ul>
