added pictures and style
added permanent pictures and styles tot he grid below

--- a/Pages/portfoli.html
+++ b/Pages/portfoli.html
@@ -39,7 +39,7 @@
         </nav>
         <h1 class="phead"><u>Portfolio</u></h1>
 
-     <!--Carousel Start-->
+        <!--Carousel Start-->
         <div class="container">
             <h2>Past projects</h2>
             <p>We once worked in a bootcamp and made some cool stuffs such as... <br />
@@ -88,28 +88,36 @@
                     </a>
                 </div>
             </div>
-        
-    <!--Carousel End-->
 
-        <div class="portinfo">
-            <h3>As you can see,</h3>
-            <p>We have worked with many fake organizations throughout the tri-state area our prices are project based, and these are just the tip of what we have produced <a href="contact.html">Click Here</a> for contact information</p>
-            </p>
+            <!--Carousel End-->
+
+            <div class="portinfo">
+                <h3>As you can see,</h3>
+                <p>We have worked with many fake organizations throughout the tri-state area our prices are project
+                    based, and these are just the tip of what we have produced <a href="contact.html">Click Here</a> for
+                    contact information</p>
+                </p>
+            </div>
         </div>
-    </div>
-    <h4 style="margin-left:50px">Additional past projects</h4>
-    <table id="potable">
+        <h4 style="margin-left:50px">Additional past projects</h4>
+   
+        <table id="potable">
+            <tr>
+                <td class="thead"><b>Project Delta </b></th>
+                <td class="thead"><b>Project Aeta(Left)</b></th>
+                <td class="thead"><b>Project Iota(Right)</b></th>
+                <td class="thead"><b>Project Omega</b></th>
         <tr>
-            <td class="thead"><b>Project Delta</b</th>
-            <td class="thead"><b>Project Aeta</b></th>
-            <td class="thead"><b>Project Iota</b></th>
-            <td class="thead"><b>Project Omega</b></th>
+            <td class="thead"><img src="https://static.tvtropes.org/pmwiki/pub/images/Delta_Red_vs_Blue_9223.jpg" alt="Delta image" style="height: 300px; width: 200px;" ></th>
+            <td class="thead"><img src="https://th.bing.com/th/id/R.ff0f3e7ecfd35ef0a7423310e02c3f91?rik=8yC44KSKnlBueA&riu=http%3a%2f%2fimages6.fanpop.com%2fimage%2fpolls%2f1434000%2f1434937_1416412999049_full.png%3fv%3d1416413062&ehk=V1roBPQFWNDAn5zV%2bJCyq%2fzY%2b0dHc3YUq16LZ4Y1iik%3d&risl=&pid=ImgRaw&r=0" alt="Delta image" style="height: 300px; width: 300px;" ></th>
+            <td class="thead"><img src="https://th.bing.com/th/id/R.ff0f3e7ecfd35ef0a7423310e02c3f91?rik=8yC44KSKnlBueA&riu=http%3a%2f%2fimages6.fanpop.com%2fimage%2fpolls%2f1434000%2f1434937_1416412999049_full.png%3fv%3d1416413062&ehk=V1roBPQFWNDAn5zV%2bJCyq%2fzY%2b0dHc3YUq16LZ4Y1iik%3d&risl=&pid=ImgRaw&r=0" alt="Delta image" style="height: 300px; width: 300px;" ></th>
+            <td class="thead"><img src="https://th.bing.com/th/id/R.0b546df46e244bf81c8e252d1b78fd14?rik=jn9ZwohMniyN4g&riu=http%3a%2f%2fimages1.wikia.nocookie.net%2f__cb20121121051212%2frvb%2fimages%2f4%2f47%2fOmega_-_S10.png&ehk=VIaBav6sCT1Ikoyf%2fAea4MibnFPD%2bO0RxzQ0Az2OrCc%3d&risl=&pid=ImgRaw&r=0" alt="Delta image" style="height: 300px; width: 200px;" ></th>
         </tr>
         <tr>
-            <td>First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support</th>
-            <td>One odf the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment.</th>
-            <td>Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.</th>
-            <td>The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"</th>
+            <td>First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support ...First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support...First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support</th>
+            <td>One odf the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment....One odf the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment....One odf the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment</th>
+            <td>Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.</th>
+            <td>The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"...The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine".....The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"</th>
         </tr>
     </table>
         <footer>
