started contact page
added some styling and an image tot he contact page

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -29,16 +29,20 @@
             </li>
         </ul>
     </nav>
-    <h1>Contact</h1>
-    <nav></nav>
-    <p>If you would like to send a ghost email you can do that here after its set up</p>
 
-    <p>Email:<br />email@email.com</p>
-    <p>Phone Number:<br />307-867-5309 </p>
-    <p>Address:<br />
-        1234 Zathura St, Jumanji NA
-    </p>
-    </nav>
+    <div class="ccenter">
+        <div class="bccenter">
+            <h1>Contact</h1>
+            <p>If you would like to send a ghost email you can do that here after its set up</p>
+
+            <p>Email:<br />email@email.com</p>
+            <p>Phone Number:<br />307-867-5309 </p>
+            <p>Address:<br />
+                1234 Zathura St, Jumanji NA
+            </p>
+        </div>
+    </div>
+
 
 </body>
 
