adeed to the services page
added check boxes

--- a/Pages/services.html
+++ b/Pages/services.html
@@ -28,5 +28,12 @@
         </ul>
     </nav>
     <h1>Services</h1>
+    <p> <b><u>Let us Know what you need</u></B></p>
+    <p>Check all that apply</p>
+    <input type="checkbox">   Do you require help?</p>
+    <input type="checkbox">   Are you willing to pay money?</p>
+    <input type="checkbox">   In US dollars?</p>
+    <input type="checkbox">   Due within a week?</p>
+    <input type="textbox">
 </body>
 </html>
