--- a/Pages/services.html
+++ b/Pages/services.html
@@ -34,6 +34,10 @@
     <input type="checkbox">   Are you willing to pay money?</p>
     <input type="checkbox">   In US dollars?</p>
     <input type="checkbox">   Due within a week?</p>
-    <input type="textbox">
+    <h3>Requests</h3>
+    <textarea rows="5" cols="60" placeholder="What services are you requesting?"> What services are you requesting?</textarea> </br>
+    <h3>Who should we Email?</h3>
+    <input type="email">
+    <input type="submit" value="Submit"
 </body>
 </html>
