added to survey page
added filer input fields for the survey page

--- a/Pages/survey.html
+++ b/Pages/survey.html
@@ -28,5 +28,12 @@
         </ul>
     </nav>
     <h1>Survey</h1>
+    <p>Since you found your way here please take this quick survey so you know you wasted typing energy for something that wont work</p>
+    <h4>How did you hear about this?</h4>
+    <input type="text" style="width:30em; height:30px" placeholder="Waste your time...">
+    <h4>Has this services been of use to you?</h4>
+    <input type="text" style="width:30em; height:30px" placeholder="Your still here????">
+    <h4>Would you recommend this service to anyone?</h4>
+    <input type="text" style="width:30em; height:30px" placeholder="Does Eli know your doing this?">
 </body>
 </html>
