footer and header
fixed the footer and header so that the footer was always at the bottom no matter the content on the page

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -10,26 +10,27 @@
 </head>
 
 <body>
-    <nav class="navi">
-        <ul>
-            <li class="navibar">
-                <a href="index.html">Home</a>
-            </li>
-            <li class="navibar">
-                <a href="portfoli.html">Portfolio</a>
-            </li>
-            <li class="navibar">
-                <a href="services.html">Services</a>
-            </li>
-            <li class="navibar">
-                <a href="contact.html">Contact</a>
-            </li>
-            <li class="navibar">
-                <a href="survey.html">Survey</a>
-            </li>
-        </ul>
-    </nav>
-
+    <header>
+        <nav class="navi">
+            <ul>
+                <li class="navibar">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="navibar">
+                    <a href="portfoli.html">Portfolio</a>
+                </li>
+                <li class="navibar">
+                    <a href="services.html">Services</a>
+                </li>
+                <li class="navibar">
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li class="navibar">
+                    <a href="survey.html">Survey</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <div class="ccenter"></div>
         <div class="bccenter">
             <h1>Contact</h1>
@@ -43,7 +44,10 @@
         </div>
     
 
-
+        <footer>
+            <p>trademark G&E industries</p>
+            <p>founded 2022</p>
+        </footer>
 </body>
 
 </html>
