--- a/Pages/index.html
+++ b/Pages/index.html
@@ -5,25 +5,27 @@
     <link rel="stylesheet" href="styles.css">
 
 <body>
-    <nav class="navi">
-        <ul>
-            <li class="navibar">
-                <a href="index.html">Home</a>
-            </li>
-            <li class="navibar">
-                <a href="portfoli.html">Portfolio</a>
-            </li>
-            <li class="navibar">
-                <a href="services.html">Services</a>
-            </li>
-            <li class="navibar">
-                <a href="contact.html">Contact</a>
-            </li>
-            <li class="navibar">
-                <a href="survey.html">Survey</a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="navi">
+            <ul>
+                <li class="navibar">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="navibar">
+                    <a href="portfoli.html">Portfolio</a>
+                </li>
+                <li class="navibar">
+                    <a href="services.html">Services</a>
+                </li>
+                <li class="navibar">
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li class="navibar">
+                    <a href="survey.html">Survey</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <title> Oracle of Eternals</title>
     <div class="image">
         <img src="https://th.bing.com/th/id/OIP.HAcIqIk35ZcM9IxA59tqfwHaE8?pid=ImgDet&rs=1"
