--- a/Pages/portfoli.html
+++ b/Pages/portfoli.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-
-    <body>
+    <header>
         <nav class="navi">
             <ul>
                 <li class="navibar">
@@ -37,6 +36,7 @@
                 </li>
             </ul>
         </nav>
+    </header>
         <h1 class="phead"><u>Portfolio</u></h1>
 
         <!--Carousel Start-->
