--- a/Pages/survey.html
+++ b/Pages/survey.html
@@ -8,25 +8,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navi">
-        <ul>
-            <li class="navibar">
-                <a href="index.html">Home</a>
-            </li>
-            <li class="navibar">
-                <a href="portfoli.html">Portfolio</a>
-            </li>
-            <li class="navibar">
-                <a href="services.html">Services</a>
-            </li>
-            <li class="navibar">
-                <a href="contact.html">Contact</a>
-            </li>
-            <li class="navibar">
-                <a href="survey.html">Survey</a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="navi">
+            <ul>
+                <li class="navibar">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="navibar">
+                    <a href="portfoli.html">Portfolio</a>
+                </li>
+                <li class="navibar">
+                    <a href="services.html">Services</a>
+                </li>
+                <li class="navibar">
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li class="navibar">
+                    <a href="survey.html">Survey</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <h1>Survey</h1>
     <p>Since you found your way here please take this quick survey so you know you wasted typing energy for something that wont work</p>
     <h4>How did you hear about this?</h4>
@@ -35,5 +37,9 @@
     <input type="text" style="width:30em; height:30px" placeholder="Your still here????">
     <h4>Would you recommend this service to anyone?</h4>
     <input type="text" style="width:30em; height:30px" placeholder="Does Eli know your doing this?">
+    <footer>
+        <p>trademark G&E industries</p>
+        <p>founded 2022</p>
+    </footer>
 </body>
 </html>
