--- a/Pages/services.html
+++ b/Pages/services.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
     <nav class="navi">
         <ul>
             <li class="navibar">
@@ -27,6 +28,7 @@
             </li>
         </ul>
     </nav>
+</header>
     <h1>Services</h1>
     <p> <b><u>Let us Know what you need</u></B></p>
     <p>Check all that apply</p>
@@ -38,6 +40,11 @@
     <textarea rows="5" cols="60" placeholder="What services are you requesting?"> What services are you requesting?</textarea> </br>
     <h3>Who should we Email?</h3>
     <input type="email">
-    <input type="submit" value="Submit"
+    <input type="submit" value="Submit">
+
+    <footer>
+        <p>trademark G&E industries</p>
+        <p>founded 2022</p>
+    </footer>
 </body>
 </html>
