centered the survey
centered and set margin for the survey page

--- a/Pages/survey.html
+++ b/Pages/survey.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Survey</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav class="navi">
@@ -29,17 +31,21 @@
             </ul>
         </nav>
     </header>
-    <h1>Survey</h1>
-    <p>Since you found your way here please take this quick survey so you know you wasted typing energy for something that wont work</p>
-    <h4>How did you hear about this?</h4>
-    <input type="text" style="width:30em; height:30px" placeholder="Waste your time...">
-    <h4>Has this services been of use to you?</h4>
-    <input type="text" style="width:30em; height:30px" placeholder="Your still here????">
-    <h4>Would you recommend this service to anyone?</h4>
-    <input type="text" style="width:30em; height:30px" placeholder="Does Eli know your doing this?">
+    <div id="center">
+        <h1>Survey</h1>
+        <p>Since you found your way here please take this quick survey so you know you wasted typing energy for
+            something that wont work</p>
+        <h4>How did you hear about this?</h4>
+        <input type="text" style="width:30em; height:3em" placeholder="Waste your time..." class="survey">
+        <h4>Has this services been of use to you?</h4>
+        <input type="text" style="width:30em; height:3em" placeholder="Your still here????" class="survey">
+        <h4>Would you recommend this service to anyone?</h4>
+        <input type="text" style="width:30em; height:3em" placeholder="Does Eli know your doing this?" class="survey">
+    </div>
     <footer>
         <p>trademark G&E industries</p>
         <p>founded 2022</p>
     </footer>
 </body>
+
 </html>
