added styling to the paragraph in the survey
paragraph styling

--- a/Pages/survey.html
+++ b/Pages/survey.html
@@ -33,7 +33,7 @@
     </header>
     <div id="center">
         <h1>Survey</h1>
-        <p>Since you found your way here please take this quick survey so you know you wasted typing energy for
+        <p style="margin-bottom:4em;">Since you found your way here please take this quick survey so you know you wasted typing energy for
             something that wont work</p>
         <h4>How did you hear about this?</h4>
         <input type="text" style="width:30em; height:3em" placeholder="Waste your time..." class="survey">
