--- a/Pages/services.html
+++ b/Pages/services.html
@@ -9,26 +9,27 @@
 </head>
 <body>
     <header>
-    <nav class="navi">
-        <ul>
-            <li class="navibar">
-                <a href="index.html">Home</a>
-            </li>
-            <li class="navibar">
-                <a href="portfoli.html">Portfolio</a>
-            </li>
-            <li class="navibar">
-                <a href="services.html">Services</a>
-            </li>
-            <li class="navibar">
-                <a href="contact.html">Contact</a>
-            </li>
-            <li class="navibar">
-                <a href="survey.html">Survey</a>
-            </li>
-        </ul>
-    </nav>
-</header>
+        <nav class="navi"> 
+            <div class="title"> Great Ghastly</div>
+            <ul>
+                <li class="navibar">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="navibar">
+                    <a href="portfoli.html">Portfolio</a>
+                </li>
+                <li class="navibar">
+                    <a href="services.html">Services</a>
+                </li>
+                <li class="navibar">
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li class="navibar">
+                    <a href="survey.html">Survey</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <h1>Services</h1>
     <p> <b><u>Let us Know what you need</u></B></p>
     <p>Check all that apply</p>
