--- a/Pages/index.html
+++ b/Pages/index.html
@@ -6,7 +6,8 @@
 
 <body>
     <header>
-        <nav class="navi">
+        <nav class="navi"> 
+            <div class="title"> Great Ghastly</div>
             <ul>
                 <li class="navibar">
                     <a href="index.html">Home</a>
