--- a/Pages/portfoli.html
+++ b/Pages/portfoli.html
@@ -17,7 +17,8 @@
 
 <body>
     <header>
-        <nav class="navi">
+        <nav class="navi"> 
+            <div class="title"> Great Ghastly</div>
             <ul>
                 <li class="navibar">
                     <a href="index.html">Home</a>
