--- a/Pages/survey.html
+++ b/Pages/survey.html
@@ -11,7 +11,8 @@
 
 <body>
     <header>
-        <nav class="navi">
+        <nav class="navi"> 
+            <div class="title"> Great Ghastly</div>
             <ul>
                 <li class="navibar">
                     <a href="index.html">Home</a>
