added styling to the services page
added styling to services

--- a/Pages/services.html
+++ b/Pages/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,10 @@
     <title>Services</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
-        <nav class="navi"> 
+        <nav class="navi">
             <div class="title"> Great Ghastly</div>
             <ul>
                 <li class="navibar">
@@ -30,22 +32,24 @@
             </ul>
         </nav>
     </header>
-    <h1>Services</h1>
-    <p> <b><u>Let us Know what you need</u></B></p>
-    <p>Check all that apply</p>
-    <input type="checkbox">   Do you require help?</p>
-    <input type="checkbox">   Are you willing to pay money?</p>
-    <input type="checkbox">   In US dollars?</p>
-    <input type="checkbox">   Due within a week?</p>
-    <h3>Requests</h3>
-    <textarea rows="5" cols="60" placeholder="What services are you requesting?"> What services are you requesting?</textarea> </br>
-    <h3>Who should we Email?</h3>
-    <input type="email">
-    <input type="submit" value="Submit">
-
+    <div id="center">
+        <h1>Services</h1>
+        <p> <b><u>Let us Know what you need</u></B></p>
+        <input type="checkbox"> Do you require help?</p>
+        <input type="checkbox"> Are you willing to pay money?</p>
+        <input type="checkbox"> In US dollars?</p>
+        <input type="checkbox"> Due within a week?</p>
+        <h3>Requests</h3>
+        <textarea rows="5" cols="60"
+            placeholder="What services are you requesting?"> What services are you requesting?</textarea> </br>
+        <h3>Who should we Email?</h3>
+        <input type="email">
+        <input type="submit" value="Submit">
+    </div>
     <footer>
         <p>trademark G&E industries</p>
         <p>founded 2022</p>
     </footer>
 </body>
+
 </html>
