--- a/Pages/services.html
+++ b/Pages/services.html
@@ -32,20 +32,24 @@
             </ul>
         </nav>
     </header>
-    <div id="center">
+    <div class="sbackground"></div>
+    <div class="sinput">
         <h1>Services</h1>
-        <p> <b><u>Let us Know what you need</u></B></p>
+        <p><b><u>Let us Know what you need</u></b></p>
         <input type="checkbox"> Do you require help?</p>
         <input type="checkbox"> Are you willing to pay money?</p>
         <input type="checkbox"> In US dollars?</p>
-        <input type="checkbox"> Due within a week?</p>
+        <input type="checkbox"><b> Due within a week?</b></p>
         <h3>Requests</h3>
         <textarea rows="5" cols="60"
             placeholder="What services are you requesting?"> What services are you requesting?</textarea> </br>
-        <h3>Who should we Email?</h3>
+        <h3><b>Who should we Email?</b></h3>
         <input type="email">
         <input type="submit" value="Submit">
     </div>
+
+
+
     <footer>
         <p>trademark G&E industries</p>
         <p>founded 2022</p>
