--- a/Website/Pages/index.html
+++ b/Website/Pages/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="..\CSS\styles.css">
+    <link rel="stylesheet" href="..\CSS\index.css">
 
 <body>
     <header>
