--- a/Website/Pages/bootstrap.html
+++ b/Website/Pages/bootstrap.html
@@ -57,7 +57,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="services.html">Services</a></li>
-                <li><a class="dropdown-item" href="portfolio.html">Portfolio</a></li>
+                <li><a class="dropdown-item" href="portfoli.html">Portfolio</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
