--- a/Website/Pages/portfoli.html
+++ b/Website/Pages/portfoli.html
@@ -8,17 +8,18 @@
     <title>Bootstrap Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="..\CSS\styles.css">
     <link rel="stylesheet" href="..\CSS\portfolio.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 
 </head>
 
 <body>
     <header>
-        <nav class="navi"> 
+        <nav class="navi">
             <div class="title"> Great Ghastly</div>
             <ul>
                 <li class="navibar">
@@ -39,71 +40,104 @@
             </ul>
         </nav>
     </header>
-        <h1 class="phead"><u>Portfolio</u></h1>
+    <h1 class="phead"><u>Portfolio</u></h1>
 
-        <!--Carousel Start-->
-        <div class="container">
-            <h2>Past projects</h2>
-            <p>We once worked in a bootcamp and made some cool stuffs such as... <br />
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
+    <!--Carousel Start-->
+    <!-- <div class="container">
+        <h2>Past projects</h2>
+        <p>We once worked in a bootcamp and made some cool stuffs such as... <br />
+        <div id="myCarousel" class="carousel slide" data-ride="carousel"> -->
+    <!-- indicators -->
+    <!-- <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol> -->
 
-                <!-- wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="https://c4.wallpaperflare.com/wallpaper/39/346/426/digital-art-men-city-futuristic-night-hd-wallpaper-preview.jpg"
-                            alt="cool photo" style="height:400px;width:100%">
-                        <div class="carousel-caption">
-                            <h3><u>Cool</u></h3>
-                            <p class="pport">atttempt at bootstrap</p>
-                        </div>
+    <!-- wrapper for slides -->
+    <!-- <div class="carousel-inner">
+                <div class="item active">
+                    <img src="https://c4.wallpaperflare.com/wallpaper/39/346/426/digital-art-men-city-futuristic-night-hd-wallpaper-preview.jpg"
+                        alt="cool photo" style="height:400px;width:100%">
+                    <div class="carousel-caption">
+                        <h3><u>Cool</u></h3>
+                        <p class="pport">atttempt at bootstrap</p>
                     </div>
-                    <div class="item">
-                        <img src="https://wallpapercave.com/wp/lfxxrxt.jpg" style="height:400px;width:100%;">
-                        <div class="carousel-caption">
-                            <h3><u>Dope</u></h3>
-                            <p class="pport"> Dope af but of course stay proffessional</p>
-                        </div>
+                </div>
+                <div class="item">
+                    <img src="https://wallpapercave.com/wp/lfxxrxt.jpg" style="height:400px;width:100%;">
+                    <div class="carousel-caption">
+                        <h3><u>Dope</u></h3>
+                        <p class="pport"> Dope af but of course stay proffessional</p>
                     </div>
-                    <div class="item">
-                        <img src="https://www.itl.cat/pngfile/big/236-2366806_minimalistic-landscape-wallpaper-1080p.jpg"
-                            alt="an ok photo" style="height:400px;width:100%">
-                        <div class="carousel-caption">
-                            <h3><u>Not totally cool but cool enough</u></h3>
-                            <p class="pport">not bad for a first project id hope</p>
-                        </div>
+                </div>
+                <div class="item">
+                    <img src="https://www.itl.cat/pngfile/big/236-2366806_minimalistic-landscape-wallpaper-1080p.jpg"
+                        alt="an ok photo" style="height:400px;width:100%">
+                    <div class="carousel-caption">
+                        <h3><u>Not totally cool but cool enough</u></h3>
+                        <p class="pport">not bad for a first project id hope</p>
                     </div>
+                </div> -->
 
-                    <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+    <!-- Left and right controls -->
+    <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div> -->
+
+    <!--Carousel End-->
+    <section>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://www.itl.cat/pngfile/big/236-2366806_minimalistic-landscape-wallpaper-1080p.jpg"
+                        alt="an ok photo" style="height:400px;width:100%">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                          </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://c4.wallpaperflare.com/wallpaper/39/346/426/digital-art-men-city-futuristic-night-hd-wallpaper-preview.jpg"
+                        alt="cool photo" style="height:400px;width:100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://wallpapercave.com/wp/lfxxrxt.jpg" style="height:400px;width:100%;""
+                alt=" an ok photo" style="height:400px;width:100%">
                 </div>
             </div>
-
-            <!--Carousel End-->
-
-            <div class="portinfo">
-                <h3>As you can see,</h3>
-                <p>We have worked with many fake organizations throughout the tri-state area our prices are project
-                    based, and these are just the tip of what we have produced <a href="contact.html">Click Here</a> for
-                    contact information</p>
-                </p>
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <h4 style="margin-left:50px">Additional past projects</h4>
-   
-        <table id="potable">
+    </section>
+    <article style=margin:10%;>
+        <div class="portinfo">
+            <h3>As you can see,</h3>
+            <p>We have worked with many fake organizations throughout the tri-state area our prices are project
+                based, and these are just the tip of what we have produced <a href="contact.html">Click Here</a> for
+                contact information</p>
+            </p>
+        </div>
+        </div>
+    </article>
+    <h4 style="margin-left:50px">Additional past projects</h4>
+
+    <!-- <table id="potable">
             <tr>
                 <td class="thead"><b>Project Delta </b></th>
                 <td class="thead"><b>Project Aeta(Left)</b></th>
@@ -121,11 +155,62 @@
             <td>Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.</th>
             <td>The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"...The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine".....The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"</th>
         </tr>
-    </table>
-        <footer>
-            <p>trademark G&E industries</p>
-            <p>founded 2022</p>
-        </footer>
-    </body>
+    </table> -->
+    <section>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+            <div class="col">
+                <div class="card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png"
+                        class="card-img-top" alt="test image">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png"
+                        class="card-img-top" alt="Test image">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png"
+                        class="card-img-top" alt="test image">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png"
+                        class="card-img-top" alt="Test image">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>trademark G&E industries</p>
+        <p>founded 2022</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+</body>
 
 </html>
