--- a/Website/Pages/portfoli.html
+++ b/Website/Pages/portfoli.html
@@ -36,24 +36,32 @@
     </header>
     <h1 class="phead"><u>Portfolio</u></h1>
     <!--Carousel Start-->
-    <section>
+    <section style="text-align: center;">
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="https://www.itl.cat/pngfile/big/236-2366806_minimalistic-landscape-wallpaper-1080p.jpg"
-                        alt="an ok photo" style="height:400px;width:100%">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
-                          </div>
+                        alt="an ok photo" style="height:400px;width:90%">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Marvelous Carousel</h5>
+                        <p>3 slides of enjoyment and aesthetic pictures</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="https://c4.wallpaperflare.com/wallpaper/39/346/426/digital-art-men-city-futuristic-night-hd-wallpaper-preview.jpg"
-                        alt="cool photo" style="height:400px;width:100%">
+                        alt="cool photo" style="height:400px;width:90%">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5><strong>Technology</strong></h5>
+                        <p><strong>Inspires us, molds us, converts us</strong></p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://wallpapercave.com/wp/lfxxrxt.jpg" style="height:400px;width:100%;""
-                alt=" an ok photo" style="height:400px;width:100%">
+                    <img src="https://wallpapercave.com/wp/lfxxrxt.jpg" style="height:400px;width:90%;"
+                alt=" an ok photo">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Photo ops</h5>
+                        <p>Digital art reimagines art</p>
+                    </div>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -79,17 +87,21 @@
         </div>
         </div>
     </article>
-<!--Project cards Start-->
+    <!--Project cards Start-->
     <h4 style="margin-left:50px">Additional past projects</h4>
     <section>
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="https://static.tvtropes.org/pmwiki/pub/images/Delta_Red_vs_Blue_9223.jpg" style="height: 250px;"
-                        class="card-img-top" alt="Delta image" >
+                    <img src="https://static.tvtropes.org/pmwiki/pub/images/Delta_Red_vs_Blue_9223.jpg"
+                        style="height: 250px;" class="card-img-top" alt="Delta image">
                     <div class="card-body">
                         <h5 class="card-title">Project Delta</h5>
-                        <p class="card-text">First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support ...First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support...First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support</p>
+                        <p class="card-text">First assigned to Freelancer Agent "New York" aka "York" He was set to
+                            provide highly effective logistical field support ...First assigned to Freelancer Agent "New
+                            York" aka "York" He was set to provide highly effective logistical field support...First
+                            assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective
+                            logistical field support</p>
                     </div>
                 </div>
             </div>
@@ -99,7 +111,10 @@
                         class="card-img-top" alt="Test image">
                     <div class="card-body">
                         <h5 class="card-title">Project Aeta(Left)</h5>
-                        <p class="card-text">One of the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment....One of the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment....One of the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment</p>
+                        <p class="card-text">One of the last programed AI to come from Project freelancer, classified as
+                            failed as a 'Duel' implant experiment....One of the last programed AI to come from Project
+                            freelancer, classified as failed as a 'Duel' implant experiment....One of the last programed
+                            AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment</p>
                     </div>
                 </div>
             </div>
@@ -109,17 +124,26 @@
                         class="card-img-top" alt="test image">
                     <div class="card-body">
                         <h5 class="card-title">Project Iota(Right)</h5>
-                        <p class="card-text">Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.</p>
+                        <p class="card-text">Paired as the second ai for the 'Duel" implant experiment to agent
+                            "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the
+                            'Duel" implant experiment to agent "Carolina" that was ultimately classified as a
+                            failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina"
+                            that was ultimately classified as a failure.</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://th.bing.com/th/id/R.0b546df46e244bf81c8e252d1b78fd14?rik=jn9ZwohMniyN4g&riu=http%3a%2f%2fimages1.wikia.nocookie.net%2f__cb20121121051212%2frvb%2fimages%2f4%2f47%2fOmega_-_S10.png&ehk=VIaBav6sCT1Ikoyf%2fAea4MibnFPD%2bO0RxzQ0Az2OrCc%3d&risl=&pid=ImgRaw&r=0" style="height: 250px;"
-                        class="card-img-top" alt="Test image">
+                    <img src="https://th.bing.com/th/id/R.0b546df46e244bf81c8e252d1b78fd14?rik=jn9ZwohMniyN4g&riu=http%3a%2f%2fimages1.wikia.nocookie.net%2f__cb20121121051212%2frvb%2fimages%2f4%2f47%2fOmega_-_S10.png&ehk=VIaBav6sCT1Ikoyf%2fAea4MibnFPD%2bO0RxzQ0Az2OrCc%3d&risl=&pid=ImgRaw&r=0"
+                        style="height: 250px;" class="card-img-top" alt="Test image">
                     <div class="card-body">
                         <h5 class="card-title">Project Omega</h5>
-                        <p class="card-text">The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"...The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine".....The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"</th></p>
+                        <p class="card-text">The peak of what turned out to be the ambition of a rouge AI that had taken
+                            over the mind of Freelancer agent "Maine"...The peak of what turned out to be the ambition
+                            of a rouge AI that had taken over the mind of Freelancer agent "Maine".....The peak of what
+                            turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent
+                            "Maine"</th>
+                        </p>
                     </div>
                 </div>
             </div>
