--- a/Website/Pages/contact.html
+++ b/Website/Pages/contact.html
@@ -56,18 +56,15 @@
 </header>
 
 <body>
-  <div class="ccenter">
-    <div class="bccenter">
-      <h1>Contact</h1>
+  <h1>Contact Us!</h1>
+    <div class="cont-container">
       <p><b>If you would like to send a ghost email you can do that here after its set up</b></p>
-
       <p><b>Email:<br />email@email.com</b></p>
       <p><b>Phone Number:<br />307-867-5309 </b></p>
       <p></p><b>Address:<br />
         1234 Zathura St, Jumanji NA</b>
       </p>
     </div>
-  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
